Update: Liste des projets Promo 2021

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -24,12 +24,13 @@
     "Proj": "Our projects",
     "ARCL": "Cloud Architecture",
     "ARCLText": "Creation of an hybrid cloud using Openstack technologies as well as PaaS Services such as AWS or Microsoft Azure",
-    "VIRT": "Virtualization",
+    "VIRT": "Sell the transformation",
     "VIRTText": "Business case realization based on cost lines and saving levers, study of a genuine company inventory.",
     "IOTText": "Creation of an IoT Object and build marketing & business processes (Business Case, Advertising) as well as the realization",
     "PAEText": "Group Project in partnership with several companies : Professional Relationships of EPITA, Korn Ferry",
     "URSI": "IS Urbanization",
     "URSIText": "Creation of a reduced Information System simulating a Retail company's behavior",
+    "WTT": "Web Technologies",
     "WTText": "Web project realization, each developped with choice-based modern web technology : ROR, Javascript, Golang...",
     "PMS": "Multi-specialty Project",
     "PMSText": "SIGL, Security and Network students work together to propose a transformation solution in a real context",
