--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -25,13 +25,14 @@
     "Proj": "Nos Projets",
     "ARCL": "Architecture Cloud",
     "ARCLText": "Mise en place d'un cloud hybride, basé sur OpenStack, permettant de mettre en pratique les concepts clefs du Cloud : Design-for-Failure & Self-Service",
-    "VIRT": "Virtualisation",
+    "VIRT": "Vendre la transformation",
     "VIRTText": "Réalisation d'un Business Case visant à la réduction des coûts engendrés par un parc de serveurs, étude d'un inventaire en conditions réelles.",
     "IOTText": "Création d'un objet connecté innovant, incluant la présentation d'un Business Case, d'une vidéo Marketing et la réalisation d'un Proof of Concept.",
     "PAEText": "Réalisation un projet encadré par une entreprise tout le long de l'année : SIGL, Relations Entreprises, Société Générale, Korn Ferry, GN..",
     "URSI": "Urbanisation des SI",
     "URSIText": "Création d'un SI constitué de diverses application communiquant entre elles pour simuler le comportement d'une société de grande distribution.",
     "NLPF": "Nouveaux Languages de Programmation & Frameworks",
+    "WTT": "Technologies Web",
     "WTText": "Réalisation de deux projets web, développés chacun avec des technologies modernes différentes au choix : ROR, Javascript, Golang...",
     "PMS": "Multi-Spé",
     "PMSText": "Étudiants SIGL, Sécurité et Télécom se regroupent afin de proposer une solution de transformation dans un cadre concret",
