[SV][Projets] changer multi-spé par CONDUITE DE PROJETS MULTI-SPE

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -34,7 +34,7 @@
     "NLPF": "Nouveaux Languages de Programmation & Frameworks",
     "WTT": "Technologies Web",
     "WTText": "Réalisation de deux projets web, développés chacun avec des technologies modernes différentes au choix : ROR, Javascript, Golang...",
-    "PMS": "Multi-Spé",
+    "PMS": "CONDUITE DE PROJETS MULTI-SPE",
     "PMSText": "Étudiants SIGL, Sécurité et Télécom se regroupent afin de proposer une solution de transformation dans un cadre concret",
     "MEPA": "Méthodologie Agile",
     "MEPAText": "Réalisation d'un projet libre respectant les principes et les bonnes pratiques de l'Agile et de la méthode SCRUM.",
