[FAQ][TAB] created tab faq

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -8,6 +8,7 @@
     "Disciplines": "Liste des matières",
     "Careers": "Opportunités",
     "Social": "Contact et Réseau",
+    "Q&A": "FAQ",
     "Testimonies": "Témoignages",
     "About SIGL": "À Propos de SIGL",
     "AboutText": "Les entreprises ont à développer des systèmes d'information et des logiciels complexes dont les qualités principales sont leurs capacités à évoluer, leur fiabilité ainsi que leur performance. Les besoins des entreprises évoluent toujours plus rapidement avec l'apparition de nouveaux acteurs et de modèles économiques disruptifs soutenus par la promesse de nouvelles technologies hyper-connectées et toujours moins chères à utiliser. Il faut donc aller plus vite pour transformer l'existant et pour créer les nouveaux services/métiers d'aujourd'hui et de demain : être totalement présent sur Internet, s'interconnecter avec tous les systèmes d'information de l'entreprise et à un écosystème toujours plus vaste, proposer de nouveaux e-services en temps réel, mieux connaître ses clients.",
