[SV][FAQ] Remove Answers and add 'Mail epita'

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -42,7 +42,7 @@
     "ARCHText": "Class Project in order to get an overview of all possible aspects of IS Architecture",
 
     "Last Name": "Last Name",
-    "Mail": "Mail",
+    "Mail": "Mail Epita",
     "Name": "Name",
     "login": "Login",
     "Question": "Question",
