--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -25,7 +25,7 @@
     "D&TText": "Comprendre et rendre viable la transformation digitale des entreprises ainsi que les nouveaux leviers d'innovation rendus possibles par l'IT et ses conséquences.",
 
     "Last Name": "Nom",
-    "Mail": "eMail",
+    "Mail": "Mail Epita",
     "Name": "Prénom",
     "login": "Login",
     "Question": "Question",
