--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -47,10 +47,10 @@
     "WTT": "Technologies Web",
     "WTText": "Réalisation de deux projets web, développés chacun avec des technologies modernes différentes au choix : ROR, Javascript, Golang...",
     "PMS": "CONDUITE DE PROJETS MULTI-SPE",
-    "PMSText": "Étudiants SIGL, Sécurité et Télécom se regroupent afin de proposer une solution de transformation dans un cadre concret",
+    "PMSText": "Étudiants SIGL, Sécurité et Télécom se regroupent afin de proposer une solution de transformation dans un cadre concret. Projet de classe permettant de comprendre toutes les facettes de l'Architecture des SI ",
     "MEPA": "Méthodologie Agile",
     "MEPAText": "Réalisation d'un projet libre respectant les principes et les bonnes pratiques de l'Agile et de la méthode SCRUM.",
-    "ARCH": "Architecture",
+
     "ARCHText": "Projet de classe permettant de comprendre toutes les facettes de l'Architecture des SI ",
 
 
