Added SDI description (French)

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -157,9 +157,9 @@
     "LM_PMDE_text2": "Identifier des solutions concrètes",
     "LM_PMDE_text3": "Délivrer une mission de conseil",
 
-    "LM_SDI_text1": "SDI Texte 1",
-    "LM_SDI_text2": "SDI Texte 2",
-    "LM_SDI_text3": "SDI Texte 3",
+    "LM_SDI_text1": "Intégrer le principe de réalité du monde dans lequel nous vivons et la conscience des enjeux pour la planète : dérèglement climatique, peak oil, épuisement des ressources ...",
+    "LM_SDI_text2": "Promouvoir la transition vers une économie bas carbone et l’idée qu’il est possible d'agir à titre individuel et collectif dans nos métiers de l'IT et du Digital....",
+    "LM_SDI_text3": "Faciliter le passage à l’acte dans IT : appliquer une démarche de Sutainability-Driven Software Dévelopement aux : Product Management, dev front/back et au run des infrastructures.",
 
     "LM_METH_text1": "Apprentissage de méthodes de développement",
     "LM_METH_text2": "Formation aux modèles conceptuels sous-tendus à ces méthodes",
