--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -153,9 +153,9 @@
     "LM_PMDE_text2": "Identify concrete solutions",
     "LM_PMDE_text3": "Deliver counsel mission",
 
-    "LM_SDI_text1": "SDI TEXT 1",
-    "LM_SDI_text2": "SDI TEXT 2",
-    "LM_SDI_text3": "SDI TEXT 3",
+    "LM_SDI_text1": "Integrate the reality principle into the world we're living in and the awareness for the issues our planet is facing : climate deregulation, peak oil, ressources depletion...",
+    "LM_SDI_text2": "Promote a transition toward a low carbon economy and the possibility to act individually or collectively in the context of IT profession.",
+    "LM_SDI_text3": "Make it easier to take action in IT: apply a Sustainability-Driven software development approach to Product management, front / back development, and Infrastructure operation.",
 
     "LM_VIT2_text1": "Discuss financial and technological models based on cloud computing",
     "LM_VIT2_text2": "Apprehend unsolicited actions with a client and elaborate a Business Case",
