SDI description : quick correction

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -153,7 +153,7 @@
     "LM_PMDE_text2": "Identify concrete solutions",
     "LM_PMDE_text3": "Deliver counsel mission",
 
-    "LM_SDI_text1": "Integrate the reality principle into the world we're living in and the awareness for the issues our planet is facing : climate deregulation, peak oil, ressources depletion...",
+    "LM_SDI_text1": "Integrate the reality principle into the world we are living in and the awareness for the issues our planet is facing : climate deregulation, peak oil, ressources depletion...",
     "LM_SDI_text2": "Promote a transition toward a low carbon economy and the possibility to act individually or collectively in the context of IT profession.",
     "LM_SDI_text3": "Make it easier to take action in IT: apply a Sustainability-Driven software development approach to Product management, front / back development, and Infrastructure operation.",
 
