--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -221,7 +221,7 @@
 
     "JOB": "JOBS",
     "OPCO_JOB": "IT Senior Consultant",
-    "MOAE_JOB": "Project Management Officer | GE DIGITAL",
+    "MOAE_JOB": "Project Management Officer | Imerys",
     "OPDI_JOB": "Vice-President Business Technology Innovation | Capgemini",
     "COIN_JOB": "Head of EPITA's Innovation Laboratory | EPITA",
     "CECI_JOB": "Corporate Coach / Independent Consultant / Trainer | ACC",
