--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -221,7 +221,7 @@
 
     "JOB": "Métiers",
     "OPCO_JOB": "Consultant Senior",
-    "MOAE_JOB": "Responsable de la gestion de projet | GE DIGITAL",
+    "MOAE_JOB": "Responsable de la gestion de projet | Imerys",
     "OPDI_JOB": "Vice-présidente Innovation technologique en affaires | Capgemini",
     "COIN_JOB": "Responsable du Laboratoire d'Innovation d'EPITA | EPITA",
     "CECI_JOB": "Corporate Coach / Consultant indépendant / Formateur | ACC",
