Added Design Thinking and Object Conception Project to "Our projects" section

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,6 +15,10 @@
     "AboutText": "Nowadays, companies have to develop Information Systems and complex softwares which core features are their ability to evolve, their reliability as well as their performance. Companies requirements are evolving even faster with the apparition of new market actors and disruptive business models backed up by the promise of new technologies, even more connected and cheaper than ever. There is a need for faster technologies in order to transform existing systems and create the new business services for both today and tomorrow : Online Presence, Interconnection with all Information Systems, new real-time services, better understanding of client needs.",
     "Matières": "Course List",
     "ModulesIntro": "In order to better prepare our students for the business community, SIGL specialty is focused on 4 major topics, every one of which bringing a part of the skills and culture required in order to build tomorrow's technologies",
+    "ACOO" : "Object Conception Project",
+    "ACOOText" : "Create an object representation of a solution from a specification given by a client",
+    "DESIGN" : "Design Thinking",
+    "DESIGNText" : "Practical exercice about innovation, collaborating with Multimedia students",
     "M&A": "Mobility and Applications",
     "M&AText": "Discover and grasp the new software challenges in order to integrate it in growing mobility requirements",
     "C&A": "Cloud and Architecture",
@@ -27,9 +31,9 @@
     "ARCL": "Cloud Architecture",
     "ARCLText": "Creation of an hybrid cloud using Openstack technologies as well as PaaS Services such as AWS or Microsoft Azure",
     "VIRT": "Sell the transformation",
-    "VIRTText": "Business case realization based on cost lines and saving levers, study of a genuine company inventory.",
+    "VIRTText": "Business case realization based on cost lines and saving levers, study of a genuine company inventory",
     "IOTText": "Creation of an IoT Object and build marketing & business processes (Business Case, Advertising) as well as the realization",
-    "PAEText": "Group Project in partnership with several companies : Professional Relationships of EPITA, Capgemini, Deloitte Digital, SIGL, Cristal, Virtual Sports Traiding, GN.",
+    "PAEText": "Group Project in partnership with several companies : Professional Relationships of EPITA, Capgemini, Deloitte Digital, SIGL, Cristal, Virtual Sports Traiding, GN",
     "URSI": "IS Urbanization",
     "URSIText": "Creation of a reduced Information System simulating a Retail company's behavior",
     "WTT": "Web Technologies",
