--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -38,18 +38,22 @@
     "ARCL": "Architecture Cloud",
     "ARCLText": "Mise en place d'un cloud hybride, basé sur OpenStack, permettant de mettre en pratique les concepts clefs du Cloud : Design-for-Failure & Self-Service",
     "VIRT": "Vendre la transformation",
-    "VIRTText": "Réalisation d'un Business Case visant à la réduction des coûts engendrés par un parc de serveurs, étude d'un inventaire en conditions réelles.",
-    "IOTText": "Création d'un objet connecté innovant, incluant la présentation d'un Business Case, d'une vidéo Marketing et la réalisation d'un Proof of Concept.",
-    "PAEText": "Réalisation un projet encadré par une entreprise tout le long de l'année : Relations Entreprises, Capgemini, Deloitte Digital, SIGL, Cristal, Virtual Sports Traiding, GN.",
+    "VIRTText": "Réalisation d'un Business Case visant à la réduction des coûts engendrés par un parc de serveurs, étude d'un inventaire en conditions réelles",
+    "IOTText": "Création d'un objet connecté innovant, incluant la présentation d'un Business Case, d'une vidéo Marketing et la réalisation d'un Proof of Concept",
+    "PAEText": "Réalisation un projet encadré par une entreprise tout le long de l'année : Relations Entreprises, Capgemini, Deloitte Digital, SIGL, Cristal, Virtual Sports Traiding, GN",
     "URSI": "Urbanisation des SI",
-    "URSIText": "Création d'un SI constitué de diverses application communiquant entre elles pour simuler le comportement d'une société de grande distribution.",
+    "URSIText": "Création d'un SI constitué de diverses application communiquant entre elles pour simuler le comportement d'une société de grande distribution",
     "NLPF": "Nouveaux Languages de Programmation & Frameworks",
     "WTT": "Technologies Web",
     "WTText": "Réalisation de deux projets web, développés chacun avec des technologies modernes différentes au choix : ROR, Javascript, Golang...",
     "PMS": "CONDUITE DE PROJETS MULTI-SPE",
-    "PMSText": "Étudiants SIGL, Sécurité et Télécom se regroupent afin de proposer une solution de transformation dans un cadre concret. Projet de classe permettant de comprendre toutes les facettes de l'Architecture des SI ",
+    "PMSText": "Étudiants SIGL, Sécurité et Télécom se regroupent afin de proposer une solution de transformation dans un cadre concret. Projet de classe permettant de comprendre toutes les facettes de l'Architecture des SI",
     "MEPA": "Méthodologie Agile",
-    "MEPAText": "Réalisation d'un projet libre respectant les principes et les bonnes pratiques de l'Agile et de la méthode SCRUM.",
+    "MEPAText": "Réalisation d'un projet libre respectant les principes et les bonnes pratiques de l'Agile et de la méthode SCRUM",
+    "ACOO" : "Projet de Conception Objet",
+    "ACOOText" : "Concevoir l'architecture objet d'une solution logicielle à partir d'une description fonctionnelle client",
+    "DESIGN" : "Design Thinking",
+    "DESIGNText" : "Exercice pratique autour de l'innovation en collaboration avec les étudiants Multimédia",
 
     "ARCHText": "Projet de classe permettant de comprendre toutes les facettes de l'Architecture des SI ",
 
