fix english traduction : Disciplines > Course List

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,7 +5,7 @@
     "About": "About",
     "Modules": "Modules",
     "Projects": "Projects",
-    "Disciplines": "Disciplines",
+    "Disciplines": "Course List",
     "Careers": "Opportunities",
     "Social": "Contact & Network",
     "Q&A": "Q&A",
