update courses name

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -34,8 +34,8 @@
     "VIRTText": "Business case realization based on cost lines and saving levers, study of a genuine company inventory",
     "IOTText": "Creation of an IoT Object and build marketing & business processes (Business Case, Advertising) as well as the realization",
     "PAEText": "Group Project in partnership with several companies : Professional Relationships of EPITA, Capgemini, Deloitte Digital, SIGL, Cristal, Virtual Sports Traiding, GN",
-    "URSI": "IS Urbanization",
-    "URSIText": "Creation of a reduced Information System simulating a Retail company's behavior",
+    "UBSI": "IS Urbanization",
+    "UBSIText": "Creation of a reduced Information System simulating a Retail company's behavior",
     "WTT": "Web Technologies",
     "WTText": "Web project realization, each developped with choice-based modern web technology : ROR, Javascript, Golang...",
     "PMS": "Multi-specialty Project",
@@ -55,16 +55,16 @@
     "Réponse1": "SIGL of course.",
 
     "LM_OPCO": "OPCO : Personal Organization and Communication",
-    "LM_CECI": "CECI : Coaching and communication",
+    "LM_CEC": "CEC : Coaching and communication",
     "LM_MOAE": "MOAE : Information System Project Management",
     "LM_OPDI": "OPDI : Information Systems Steering and Organization",
     "LM_COIN": "COIN : Interpersonnal communication",
-    "LM_URSI": "URSI : Information Systems Urbanization",
+    "LM_UBSI": "UBSI : Information Systems Urbanization",
     "LM_ARCL": "ARCL : Cloud Architecture",
     "LM_SOAR": "SOAR : Solution Architecture",
     "LM_CONT": "CONT : Containerization",
     "LM_DATA": "DATA : Data",
-    "LM_ARLA": "ARLA : Software Architecture",
+    "LM_SOCRA": "SOCRA : Software Architecture",
     "LM_MEPA": "MEPA : Agile Methods Practice",
     "LM_ACOO": "ACOO : Object-Oriented Analysis and Design",
     "LM_NLPF": "NLPF : New Programming Languages & Frameworks",
@@ -76,7 +76,7 @@
     "LM_SDI": "SDI : Sustainability Driven Innovation",
     "LM_VIT2": "VIT2 : Virtualization and IT Transformation",
     "LM_METH": "METH : Methods",
-    "LM_PERS": "PERS : IT Perspectives",
+    "LM_PIT": "PIT : IT Perspectives",
     "OBJ": "Objectives:",
 
 
@@ -99,13 +99,13 @@
     "LM_COIN_text2": "Develop your know-how-to-be",
     "LM_COIN_text3": "Understand the key concepts of communication and teamwork",
 
-    "LM_CECI_text1": "Coaching workshops",
-    "LM_CECI_text2": "Set of methodologies to help better understand the different aspects of communication",
+    "LM_CEC_text1": "Coaching workshops",
+    "LM_CEC_text2": "Set of methodologies to help better understand the different aspects of communication",
 
-    "LM_URSI_text1": "Discover Information Systems reality in a company",
-    "LM_URSI_text2": "Understand Middleware base that supports it",
-    "LM_URSI_text3": "Understanding Integration issues within the Information System",
-    "LM_URSI_text4": "Grasp the concept of innovation within the IS",
+    "LM_UBSI_text1": "Discover Information Systems reality in a company",
+    "LM_UBSI_text2": "Understand Middleware base that supports it",
+    "LM_UBSI_text3": "Understanding Integration issues within the Information System",
+    "LM_UBSI_text4": "Grasp the concept of innovation within the IS",
 
     "LM_ARCL_text1": "Validate skills acquisition by building an hybrid cloud and a cloud-based application",
     "LM_ARCL_text2": "Understand key notions of Cloud Computing",
@@ -123,9 +123,9 @@
     "LM_DATA_text3": "Secure the Data",
     "LM_DATA_text4": "Organization of the company around the data",
 
-    "LM_ARLA_text1": "Acquire key concepts and principles of Software Architecture",
-    "LM_ARLA_text2": "To put the architecture and the architect into the organization",
-    "LM_ARLA_text3": "Know how to analyze the relevance of software technologies for needs",
+    "LM_SOCRA_text1": "Acquire key concepts and principles of Software Architecture",
+    "LM_SOCRA_text2": "To put the architecture and the architect into the organization",
+    "LM_SOCRA_text3": "Know how to analyze the relevance of software technologies for needs",
 
     "LM_MEPA_text1": "General concepts of development productivity's issues",
     "LM_MEPA_text2": "Experiment tools associated with Agile's planning and development methods",
@@ -169,9 +169,9 @@
     "LM_METH_text2": "Discover conceptual models and their applications in a business context",
     "LM_METH_text3": "Take part in simulations",
 
-    "LM_PERS_text1": "Undestand and control the evolution of the IT market.",
-    "LM_PERS_text2": "Solve an enterprise problem by designing and creating an IoT solution",
-    "LM_PERS_text3": "Develop synthesis, analysis and innovation skills",
+    "LM_PIT_text1": "Undestand and control the evolution of the IT market.",
+    "LM_PIT_text2": "Solve an enterprise problem by designing and creating an IoT solution",
+    "LM_PIT_text3": "Develop synthesis, analysis and innovation skills",
 
 
 
@@ -228,17 +228,17 @@
     "MOAE_JOB": "Project Management Officer | Imerys",
     "OPDI_JOB": "Vice-President Business Technology Innovation | Capgemini",
     "COIN_JOB": "Head of EPITA's Innovation Laboratory | EPITA",
-    "CECI_JOB": "Corporate Coach / Independent Consultant / Trainer | ACC",
-    "URSI_JOB1": "Owner & Co-founder | ENIOKA",
-    "URSI_JOB2": "Director of the development entity | ENIOKA",
+    "CEC_JOB": "Corporate Coach / Independent Consultant / Trainer | ACC",
+    "UBSI_JOB1": "Owner & Co-founder | ENIOKA",
+    "UBSI_JOB2": "Director of the development entity | ENIOKA",
     "CONT_JOB1": "Consultant DevSecOps | Capgemini",
     "CONT_JOB2": "Consultant DevOps | Octo Technology",
     "DATA_JOB": "Partner | Tasmane",
     "ARCL_JOB": "Group Cloud & Infrastructure Director | SUEZ",
     "SOAR_JOB1": "Director of the Hybrid IT Expertise Centre | HPE",
     "SOAR_JOB2": "Group Cloud & Infrastructure Director | SUEZ",
-    "ARLA_JOB1": "DevOps Consultant | Octo Technology",
-    "ARLA_JOB2": "Software Engineer | bettermarks GmbH",
+    "SOCRA_JOB1": "DevOps Consultant | Octo Technology",
+    "SOCRA_JOB2": "Software Engineer | bettermarks GmbH",
     "MEPA_JOB1": "IT Senior Consultant | Octo Technology",
     "MEPA_JOB2": "Product Owner | Octo Technology",
     "ACOO_JOB1": "Agile Coach | Groupe Renault",
@@ -251,8 +251,8 @@
     "PMDE_JOB": "Co-founder & Manager | EXALT",
     "SDI_JOB": "Co-founder & Manager | EXALT",
     "METH_JOB": "Head of Digital Foundry | Airbus",
-    "PERS_JOB1": "Director of the Hybrid IT Expertise Centre | HPE",
-    "PERS_JOB2": "Head of Digital Foundry | Airbus",
+    "PIT_JOB1": "Director of the Hybrid IT Expertise Centre | HPE",
+    "PIT_JOB2": "Head of Digital Foundry | Airbus",
 
     "Sub_event1": "Maintain and renew the link with former students, and allow future engineers to exchange with those who preceded them: it is with this in mind that the SIGL BBQ is organized each year, bringing together teachers,\nformer students and future graduates.",
     "Sub_event2": "Class representatives are taking the initiative to regulary organize some ecents within the major (cinema, laser game, etc.) in order to give students the opportunity to connect with each others beyond the professional environment.",
