--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -41,8 +41,8 @@
     "VIRTText": "Réalisation d'un Business Case visant à la réduction des coûts engendrés par un parc de serveurs, étude d'un inventaire en conditions réelles",
     "IOTText": "Création d'un objet connecté innovant, incluant la présentation d'un Business Case, d'une vidéo Marketing et la réalisation d'un Proof of Concept",
     "PAEText": "Réalisation un projet encadré par une entreprise tout le long de l'année : Relations Entreprises, Capgemini, Deloitte Digital, SIGL, Cristal, Virtual Sports Traiding, GN",
-    "URSI": "Urbanisation des SI",
-    "URSIText": "Création d'un SI constitué de diverses application communiquant entre elles pour simuler le comportement d'une société de grande distribution",
+    "UBSI": "Urbanisation des SI",
+    "UBSIText": "Création d'un SI constitué de diverses application communiquant entre elles pour simuler le comportement d'une société de grande distribution",
     "NLPF": "Nouveaux Languages de Programmation & Frameworks",
     "WTT": "Technologies Web",
     "WTText": "Réalisation de deux projets web, développés chacun avec des technologies modernes différentes au choix : ROR, Javascript, Golang...",
@@ -62,13 +62,13 @@
     "LM_MOAE": "MOAE : Maitrise d’ouvrage des SI",
     "LM_OPDI": "OPDI : Organisation et pilotage d’une DSI",
     "LM_COIN": "COIN : Communication Interpersonnelle",
-    "LM_CECI": "CECI : Coaching et communication",
-    "LM_URSI": "URSI : Urbanisation des SI",
+    "LM_CEC": "CEC : Coaching et communication",
+    "LM_UBSI": "UBSI : Urbanisation des SI",
     "LM_ARCL": "ARCL : Architecture Cloud",
     "LM_SOAR": "SOAR : Solution Architecture",
     "LM_CONT": "CONT : Containerisation",
     "LM_DATA": "DATA : Data",
-    "LM_ARLA": "ARLA : Architecture Logicielle",
+    "LM_SOCRA": "SOCRA : Architecture Logicielle",
     "LM_MEPA": "MEPA : Mise en pratique agile",
     "LM_ACOO": "ACOO : Analyse et Conception Orienté Objet",
     "LM_NLPF": "NLPF : Nouveaux Langages de Prog. et Framework",
@@ -80,7 +80,7 @@
     "LM_SDI":  "SDI : Sustainability Driven Innovation",
     "LM_VIT2": "VIT2 : Virtualisation et Transformation IT",
     "LM_METH": "METH : Méthodes",
-    "LM_PERS": "PERS : Perspectives IT",
+    "LM_PIT": "PIT : Perspectives IT",
     "OBJ": "Objectifs:",
 
 
@@ -103,13 +103,13 @@
     "LM_COIN_text2": "Développer son savoir-être",
     "LM_COIN_text3": "Avoir des clés pour mieux communiquer et travailler en équipe",
 
-    "LM_CECI_text1": "Ateliers de Coaching",
-    "LM_CECI_text2": "Ensemble de méthodologies pour aider à mieux comprendre les différents aspects de la communication",
+    "LM_CEC_text1": "Ateliers de Coaching",
+    "LM_CEC_text2": "Ensemble de méthodologies pour aider à mieux comprendre les différents aspects de la communication",
 
-    "LM_URSI_text1": "Découvrir la réalité d’un SI à l’échelle de l'entreprise",
-    "LM_URSI_text2": "Comprendre le socle middleware qui le supporte ",
-    "LM_URSI_text3": "Comprendre la problématique d’intégration du SI",
-    "LM_URSI_text4": "Appréhender l’innovation dans le SI",
+    "LM_UBSI_text1": "Découvrir la réalité d’un SI à l’échelle de l'entreprise",
+    "LM_UBSI_text2": "Comprendre le socle middleware qui le supporte ",
+    "LM_UBSI_text3": "Comprendre la problématique d’intégration du SI",
+    "LM_UBSI_text4": "Appréhender l’innovation dans le SI",
 
     "LM_ARCL_text1": "Valider les acquis d’une méthode d’architecture en concevant un Cloud et une application Cloud-Based",
     "LM_ARCL_text2": "Développer les connaissances autour d’un Cloud Computing",
@@ -127,9 +127,9 @@
     "LM_DATA_text3": "Sécuriser la Donnée",
     "LM_DATA_text4": "Organisation de l’entreprise autour de la donnée",
 
-    "LM_ARLA_text1": "Maîtriser les grands concepts et principes d’architecture logicielle",
-    "LM_ARLA_text2": "Positionner l’architecture et l’architecte dans l’organisation",
-    "LM_ARLA_text3": "Savoir analyser la pertinence de technologies logicielles pour chaque besoin",
+    "LM_SOCRA_text1": "Maîtriser les grands concepts et principes d’architecture logicielle",
+    "LM_SOCRA_text2": "Positionner l’architecture et l’architecte dans l’organisation",
+    "LM_SOCRA_text3": "Savoir analyser la pertinence de technologies logicielles pour chaque besoin",
 
     "LM_MEPA_text1": "Connaissance générale des problématiques de productivité des développements",
     "LM_MEPA_text2": "Expérimentation d’outils associés aux méthodes agiles de cadrage et développement",
@@ -169,9 +169,9 @@
     "LM_METH_text2": "Formation aux modèles conceptuels sous-tendus à ces méthodes",
     "LM_METH_text3": "Mise en situation",
 
-    "LM_PERS_text1": "Comprendre et maîtriser l’évolution et les tendances du marché informatique.",
-    "LM_PERS_text2": "Répondre à une problématique d’Enterprise par la mise en oeuvre d’une solution à base d’IoT",
-    "LM_PERS_text3": "Développer des compétences en synthèse, analyse et innovation",
+    "LM_PIT_text1": "Comprendre et maîtriser l’évolution et les tendances du marché informatique.",
+    "LM_PIT_text2": "Répondre à une problématique d’Enterprise par la mise en oeuvre d’une solution à base d’IoT",
+    "LM_PIT_text3": "Développer des compétences en synthèse, analyse et innovation",
 
     "githubIssue": "Reporter un bug",
 
@@ -228,17 +228,17 @@
     "MOAE_JOB": "Responsable de la gestion de projet | Imerys",
     "OPDI_JOB": "Vice-présidente Innovation technologique en affaires | Capgemini",
     "COIN_JOB": "Responsable du Laboratoire d'Innovation d'EPITA | EPITA",
-    "CECI_JOB": "Corporate Coach / Consultant indépendant / Formateur | ACC",
-    "URSI_JOB1": "Président & Co-fondateur | ENIOKA",
-    "URSI_JOB2": "Directeur de l'entité de développement Haute Couture | ENIOKA",
+    "CEC_JOB": "Corporate Coach / Consultant indépendant / Formateur | ACC",
+    "UBSI_JOB1": "Président & Co-fondateur | ENIOKA",
+    "UBSI_JOB2": "Directeur de l'entité de développement Haute Couture | ENIOKA",
     "CONT_JOB1": "Consultant DevSecOps | Capgemini",
     "CONT_JOB2": "Consultant DevOps | Octo Technology",
     "DATA_JOB": "Partner | Tasmane",
     "ARCL_JOB": "Directeur du Groupe Cloud et de l'Infrastructure | SUEZ",
     "SOAR_JOB1": "Directeur Centre d'Expertise Hybrid IT | HPE",
     "SOAR_JOB2": "Directeur du Groupe Cloud et de l'Infrastructure | SUEZ",
-    "ARLA_JOB1": "Consultant DevOps | Octo Technology",
-    "ARLA_JOB2": "Ingénieur Logiciel | bettermarks GmbH",
+    "SOCRA_JOB1": "Consultant DevOps | Octo Technology",
+    "SOCRA_JOB2": "Ingénieur Logiciel | bettermarks GmbH",
     "MEPA_JOB1": "Consultant Senior | Octo Technology",
     "MEPA_JOB2": "Chef de Projet Digital | Octo Technology",
     "ACOO_JOB1": "Coach Agile | Groupe Renault",
@@ -251,8 +251,8 @@
     "PMDE_JOB": "Co-fondateur et Manager | EXALT",
     "SDI_JOB": "Co-fondateur et Manager | EXALT",
     "METH_JOB": "Directeur de la Fabrique Digitale | Airbus",
-    "PERS_JOB1": "Directeur Centre d'Expertise Hybrid IT | HPE",
-    "PERS_JOB2": "Directeur de la Fabrique Digitale | Airbus",
+    "PIT_JOB1": "Directeur Centre d'Expertise Hybrid IT | HPE",
+    "PIT_JOB2": "Directeur de la Fabrique Digitale | Airbus",
     "Sub_event1": "Conserver et renouveler le lien avec les anciens élèves, et permettre aux futurs ingénieurs d'échanger avec ceux qui les ont précédés : c'est dans cette optique qu'est organisé chaque année le BBQ SIGL, regroupant professeurs,\n anciens étudiants et futur diplômés.",
     "Sub_event2": "A l'initiative des délégués, des événements au sein de la majeure sont organisés régulièrement (cinéma, laser game, etc.) afin de donner aux étudiants des opportunités de créer des liens au delà du cadre de l'école.",
     "Sub_event3": "Pour permettre la mise en place d'une culture mettant en avant la cohésion d'équipe et le dialogue, des moments d'échange et de détente regroupant professeurs et étudiants sont organisés",
