PMDE : Yassine Chertouk en nouveau prof

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -235,7 +235,7 @@
     "CONT_JOB2": "Consultant DevOps | Octo Technology",
     "DATA_JOB": "Partner | Tasmane",
     "ARCL_JOB": "Group Cloud & Infrastructure Director | SUEZ",
-    "SOAR_JOB1": "Director of the Hybrid IT Expertise Centre | HPE",
+    "SOAR_JOB1": "Director World Wide Hybrid Cloud Practice | Hewlett Packard Enterprise",
     "SOAR_JOB2": "Group Cloud & Infrastructure Director | SUEZ",
     "SOCRA_JOB1": "DevOps Consultant | Octo Technology",
     "SOCRA_JOB2": "Software Engineer | bettermarks GmbH",
@@ -251,7 +251,7 @@
     "PMDE_JOB": "Co-founder & Manager | EXALT",
     "SDI_JOB": "Co-founder & Manager | EXALT",
     "METH_JOB": "Head of Digital Foundry | Airbus",
-    "PIT_JOB1": "Director of the Hybrid IT Expertise Centre | HPE",
+    "PIT_JOB1": "Director World Wide Hybrid Cloud Practice | Hewlett Packard Enterprise",
     "PIT_JOB2": "Head of Digital Foundry | Airbus",
 
     "Sub_event1": "Maintain and renew the link with former students, and allow future engineers to exchange with those who preceded them: it is with this in mind that the SIGL BBQ is organized each year, bringing together teachers,\nformer students and future graduates.",
