change maj site

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -224,7 +224,7 @@
     "Labs": "Laboratoires",
 
     "JOB": "Métiers",
-    "OPCO_JOB": "Consultant Senior",
+    "OPCO_JOB": "Coach exécutif ICF PCC",
     "MOAE_JOB": "Responsable de la gestion de projet | Imerys",
     "OPDI_JOB": "Vice-présidente Innovation technologique en affaires | Capgemini",
     "COIN_JOB": "Responsable du Laboratoire d'Innovation d'EPITA | EPITA",
@@ -248,7 +248,7 @@
     "DSO_JOB": "Consultant DevSecOps | Capgemini",
     "ACCC_JOB": "Directeur de cabinet d'Olivier Girard | Accenture France",
     "INNO_JOB": "Conseil en Talent et Leadership | Korn Ferry",
-    "PMDE_JOB": "Co-fondateur et Manager | EXALT",
+    "PMDE_JOB": "Chef de produit | Fintech Blockchain",
     "SDI_JOB": "Co-fondateur et Manager | EXALT",
     "METH_JOB": "Directeur de la Fabrique Digitale | Airbus",
     "PIT_JOB1": "Directeur Centre d'Expertise Hybrid IT | HPE",
