--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -224,7 +224,7 @@
     "Lab": "Laboratories",
 
     "JOB": "JOBS",
-    "OPCO_JOB": "IT Senior Consultant",
+    "OPCO_JOB": "Executive Coach ICF PCC",
     "MOAE_JOB": "Project Management Officer | Imerys",
     "OPDI_JOB": "Vice-President Business Technology Innovation | Capgemini",
     "COIN_JOB": "Head of EPITA's Innovation Laboratory | EPITA",
@@ -248,7 +248,7 @@
     "DSO_JOB": "Consultant DevSecOps | Capgemini",
     "ACCC_JOB": "Olivier Girard's Chief of Staff | Accenture France",
     "INNO_JOB": "Talent & leadership consulting | Korn Ferry",
-    "PMDE_JOB": "Co-founder & Manager | EXALT",
+    "PMDE_JOB": "Product manager | Fintech Blockchain",
     "SDI_JOB": "Co-founder & Manager | EXALT",
     "METH_JOB": "Head of Digital Foundry | Airbus",
     "PIT_JOB1": "Director World Wide Hybrid Cloud Practice | Hewlett Packard Enterprise",
