--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -235,7 +235,7 @@
     "CONT_JOB2": "Consultant DevOps | Octo Technology",
     "DATA_JOB": "Partner | Tasmane",
     "ARCL_JOB": "Directeur du Groupe Cloud et de l'Infrastructure | SUEZ",
-    "SOAR_JOB1": "Directeur Centre d'Expertise Hybrid IT | HPE",
+    "SOAR_JOB1": "Directeur de la pratique du cloudhybride à l'échelle mondiale | Hewlett Packard Enterprise",
     "SOAR_JOB2": "Directeur du Groupe Cloud et de l'Infrastructure | SUEZ",
     "SOCRA_JOB1": "Consultant DevOps | Octo Technology",
     "SOCRA_JOB2": "Ingénieur Logiciel | bettermarks GmbH",
@@ -251,7 +251,7 @@
     "PMDE_JOB": "Chef de produit | Fintech Blockchain",
     "SDI_JOB": "Co-fondateur et Manager | EXALT",
     "METH_JOB": "Directeur de la Fabrique Digitale | Airbus",
-    "PIT_JOB1": "Directeur Centre d'Expertise Hybrid IT | HPE",
+    "PIT_JOB1": "Directeur de la pratique du cloudhybride à l'échelle mondiale | Hewlett Packard Enterprise",
     "PIT_JOB2": "Directeur de la Fabrique Digitale | Airbus",
     "Sub_event1": "Conserver et renouveler le lien avec les anciens élèves, et permettre aux futurs ingénieurs d'échanger avec ceux qui les ont précédés : c'est dans cette optique qu'est organisé chaque année le BBQ SIGL, regroupant professeurs,\n anciens étudiants et futur diplômés.",
     "Sub_event2": "A l'initiative des délégués, des événements au sein de la majeure sont organisés régulièrement (cinéma, laser game, etc.) afin de donner aux étudiants des opportunités de créer des liens au delà du cadre de l'école.",
