PMDE : Yassine Chertouk en nouveau prof (#72)
* PMDE : Yassine Chertouk en nouveau prof

* change maj site

* update

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -224,7 +224,7 @@
     "Labs": "Laboratoires",
 
     "JOB": "Métiers",
-    "OPCO_JOB": "Consultant Senior",
+    "OPCO_JOB": "Coach exécutif ICF PCC",
     "MOAE_JOB": "Responsable de la gestion de projet | Imerys",
     "OPDI_JOB": "Vice-présidente Innovation technologique en affaires | Capgemini",
     "COIN_JOB": "Responsable du Laboratoire d'Innovation d'EPITA | EPITA",
@@ -235,7 +235,7 @@
     "CONT_JOB2": "Consultant DevOps | Octo Technology",
     "DATA_JOB": "Partner | Tasmane",
     "ARCL_JOB": "Directeur du Groupe Cloud et de l'Infrastructure | SUEZ",
-    "SOAR_JOB1": "Directeur Centre d'Expertise Hybrid IT | HPE",
+    "SOAR_JOB1": "Directeur de la pratique du cloudhybride à l'échelle mondiale | Hewlett Packard Enterprise",
     "SOAR_JOB2": "Directeur du Groupe Cloud et de l'Infrastructure | SUEZ",
     "SOCRA_JOB1": "Consultant DevOps | Octo Technology",
     "SOCRA_JOB2": "Ingénieur Logiciel | bettermarks GmbH",
@@ -248,10 +248,10 @@
     "DSO_JOB": "Consultant DevSecOps | Capgemini",
     "ACCC_JOB": "Directeur de cabinet d'Olivier Girard | Accenture France",
     "INNO_JOB": "Conseil en Talent et Leadership | Korn Ferry",
-    "PMDE_JOB": "Co-fondateur et Manager | EXALT",
+    "PMDE_JOB": "Chef de produit | Fintech Blockchain",
     "SDI_JOB": "Co-fondateur et Manager | EXALT",
     "METH_JOB": "Directeur de la Fabrique Digitale | Airbus",
-    "PIT_JOB1": "Directeur Centre d'Expertise Hybrid IT | HPE",
+    "PIT_JOB1": "Directeur de la pratique du cloudhybride à l'échelle mondiale | Hewlett Packard Enterprise",
     "PIT_JOB2": "Directeur de la Fabrique Digitale | Airbus",
     "Sub_event1": "Conserver et renouveler le lien avec les anciens élèves, et permettre aux futurs ingénieurs d'échanger avec ceux qui les ont précédés : c'est dans cette optique qu'est organisé chaque année le BBQ SIGL, regroupant professeurs,\n anciens étudiants et futur diplômés.",
     "Sub_event2": "A l'initiative des délégués, des événements au sein de la majeure sont organisés régulièrement (cinéma, laser game, etc.) afin de donner aux étudiants des opportunités de créer des liens au delà du cadre de l'école.",
