--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -224,7 +224,7 @@
     "Lab": "Laboratories",
 
     "JOB": "JOBS",
-    "OPCO_JOB": "IT Senior Consultant",
+    "OPCO_JOB": "Executive Coach ICF PCC",
     "MOAE_JOB": "Project Management Officer | Imerys",
     "OPDI_JOB": "Vice-President Business Technology Innovation | Capgemini",
     "COIN_JOB": "Head of EPITA's Innovation Laboratory | EPITA",
@@ -235,7 +235,7 @@
     "CONT_JOB2": "Consultant DevOps | Octo Technology",
     "DATA_JOB": "Partner | Tasmane",
     "ARCL_JOB": "Group Cloud & Infrastructure Director | SUEZ",
-    "SOAR_JOB1": "Director of the Hybrid IT Expertise Centre | HPE",
+    "SOAR_JOB1": "Director World Wide Hybrid Cloud Practice | Hewlett Packard Enterprise",
     "SOAR_JOB2": "Group Cloud & Infrastructure Director | SUEZ",
     "SOCRA_JOB1": "DevOps Consultant | Octo Technology",
     "SOCRA_JOB2": "Software Engineer | bettermarks GmbH",
@@ -248,12 +248,11 @@
     "DSO_JOB": "Consultant DevSecOps | Capgemini",
     "ACCC_JOB": "Olivier Girard's Chief of Staff | Accenture France",
     "INNO_JOB": "Talent & leadership consulting | Korn Ferry",
-    "PMDE_JOB": "Co-founder & Manager | EXALT",
+    "PMDE_JOB": "Product manager | Fintech Blockchain",
     "SDI_JOB": "Co-founder & Manager | EXALT",
     "METH_JOB": "Head of Digital Foundry | Airbus",
-    "PIT_JOB1": "Director of the Hybrid IT Expertise Centre | HPE",
+    "PIT_JOB1": "Director World Wide Hybrid Cloud Practice | Hewlett Packard Enterprise",
     "PIT_JOB2": "Head of Digital Foundry | Airbus",
-
     "Sub_event1": "Maintain and renew the link with former students, and allow future engineers to exchange with those who preceded them: it is with this in mind that the SIGL BBQ is organized each year, bringing together teachers,\nformer students and future graduates.",
     "Sub_event2": "Class representatives are taking the initiative to regulary organize some ecents within the major (cinema, laser game, etc.) in order to give students the opportunity to connect with each others beyond the professional environment.",
     "Sub_event3": "To establish a culture of team cohesion and in order to boost up the dialogue between teams, moments of exchange and relaxation bringing together teachers and students are organised",
