--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -258,5 +258,5 @@
     "Sub_event3": "To establish a culture of team cohesion and in order to boost up the dialogue between teams, moments of exchange and relaxation bringing together teachers and students are organised",
     "Title_event4": "SIGL's Disintegration",
     "Sub_event4": "In order to celebrate together the end of studies and the success of their year, a disintegration event is organized by the students at the end of their courses. Lastest destination is: Lisbon!",
-    "Title_event5": "SIGL's 2023 End of year picture"
+    "Title_event5": "Class photo of the class of 2023"
 }
